# history-bites-backend

./: .dockerignore  .env.example  .gitignore  DECISIONS.md  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  railway.generation-cron.toml  railway.push-cron.toml  railway.toml  requirements.txt
.github/workflows/: backend-ci.yml
app/: _judge_calibration.md  admin.py  config.py  cron.py  db.py  fcm.py  generation.py  judge.py  main.py  model_provider.py  models.py  review_tags.py  schemas.py  security_headers.py  wikipedia.py
app/templates/: review.html
migrations/: env.py
migrations/versions/: 0a98a20fdb07_create_facts_and_pool_tables.py  0b3a8f2e1c4d_cleanup_v2_cohort_for_v3_recalibration.py  271733dcde42_add_review_tags_and_notes_to_pool.py  88429a9e01e5_add_pushed_at_to_facts.py  a4f2c1d83e91_add_review_rating_and_reset_pre_d26_rows.py  c7b39e4f1a82_widen_pool_uniqueness_for_prompt_version.py  d4e9c5b27a13_add_judge_columns_to_pool.py
scripts/: export_calibration_set.py  generate_calibration_set.py  list_approved_for_launch.py  regenerate_with_v2.py  regenerate_with_v3.py  tune_judge_thresholds.py
tests/: conftest.py
tests/integration/: test_admin.py  test_cron.py  test_endpoints.py  test_generation.py  test_generation_with_judge.py  test_lifespan.py  test_openapi_gating.py  test_scheduling.py
tests/unit/: test_fcm_init.py  test_fcm_message.py  test_generation_singleton.py  test_judge.py  test_logging.py  test_model_provider.py  test_pre_filter.py  test_review_tags.py  test_security_headers.py  test_send_alert.py  test_validation.py  test_wikipedia.py
