[project]
name = "historybites-backend"
version = "0.1.0"
description = "HistoryBites backend — daily history fact delivery API."
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "alembic",
    "psycopg[binary]",
    "httpx",
    "tenacity",
    "google-genai",
    "jinja2",
    "python-multipart",
    "firebase-admin",
]

[project.optional-dependencies]
# Step 11 test suite. httpx is already a runtime dep but listed here too so
# `pip install -e .[dev]` is a self-contained "I want to run tests" install.
# pytest-asyncio is needed because run_generation is async — tests that exercise
# the topup loop need @pytest.mark.asyncio.
#
# Code Review Fix 5 (Chunk 5 P3.6): coverage / pytest-cov / pytest-randomly /
# vulture are added so future audits can be quantitative. NOT enabled in CI
# (no addopts wiring; no [tool.coverage] block) — run on demand via
#   pytest --cov=app --cov-report=term-missing
#   pytest -p randomly
#   vulture app/
# Major-pinned to avoid breaking-version surprises; minor floats freely.
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "coverage>=7,<8",
    "pytest-cov>=5,<7",
    "pytest-randomly>=3,<4",
    "vulture>=2,<3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
# asyncio_mode = "auto" so async test functions don't each need the
# @pytest.mark.asyncio decorator. generate_one_pool_fact / run_generation are
# async, and tests that exercise them are the majority of the suite.
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # firebase_admin / pydantic-settings deprecation noise that we don't own.
    "ignore::DeprecationWarning",
]
